--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -29,9 +29,7 @@ pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-# goth = "0.15.3"
-# to use development goth version uncomment below
-goth =  { git = "https://github.com/golemfactory/goth.git", rev = "e22f3af1719332e1640c4e02f409f441c6afe781" }
+goth = "0.15.4"
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
