--- a/.github/workflows/integration-test-nightly.yml
+++ b/.github/workflows/integration-test-nightly.yml
@@ -72,7 +72,7 @@ jobs:
         if: always()
         run: |
           c=$(docker ps -q) && [[ $c ]] && docker kill $c
-          docker system prune -af
+          docker system prune -af --filter "until=12h"
 
       - name: Log in to GitHub Docker repository
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{github.actor}} --password-stdin
