--- a/goth_tests/assets/docker/docker-compose.yml
+++ b/goth_tests/assets/docker/docker-compose.yml
@@ -24,21 +24,24 @@ services:
             # we map them to ports 16001-16100 on the host.
             - "16001-16100:6001-6100"
 
+    # currently unused, but useful to testing payments on different networks
     ethereum-mainnet:
-        image: ghcr.io/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         environment:
             - GANACHE_CHAIN_ID=1
 
+    # default payment network
     ethereum-goerli:
-        image: ghcr.io/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         environment:
             - GANACHE_CHAIN_ID=5
 
+    # currently unused, but useful to testing payments on different networks
     ethereum-polygon:
-        image: ghcr.io/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         environment:
             - GANACHE_CHAIN_ID=137
-    
+
     outbound-test:
         # A service running a TCP sink, echo and iperf3 servers
         image: outbound-test
