--- a/goth_tests/assets/docker/docker-compose.yml
+++ b/goth_tests/assets/docker/docker-compose.yml
@@ -23,22 +23,21 @@ services:
             # systems, Docker network may be unreachable from the host)
             # we map them to ports 16001-16100 on the host.
             - "16001-16100:6001-6100"
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
 
-    # currently unused, but useful to testing payments on different networks
     ethereum-mainnet:
-        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        image: ghcr.io/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         environment:
             - GANACHE_CHAIN_ID=1
 
-    # default payment network
     ethereum-goerli:
-        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        image: ghcr.io/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         environment:
             - GANACHE_CHAIN_ID=5
 
-    # currently unused, but useful to testing payments on different networks
     ethereum-polygon:
-        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        image: ghcr.io/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         environment:
             - GANACHE_CHAIN_ID=137
 
