--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -77,6 +77,7 @@ tokio-util = { version = "0.7.2", features = ["codec", "net"] }
 tokio-stream = "0.1.6"
 url = "2.1"
 yansi = "0.5.0"
+trust-dns-resolver = { workspace = true }
 
 [dev-dependencies]
 ya-runtime-api = { version = "0.7", path = "runtime-api", features = ["codec", "server"] }
