Goth. No artifact override.

--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -19,10 +19,10 @@ docker-compose:
     # branch: ...
     # commit-hash: ...
     # release-tag: ...
-    artifacts:
-      - name: "ya-runtime-vm"
-        use-prerelease: true
-        release-tag: "v0.3.0"
+    # artifacts:
+    #   - name: "ya-runtime-vm"
+    #     use-prerelease: true
+    #     release-tag: "v0.3.0"
 
   compose-log-patterns:
     ethereum-mainnet: ".*Wallets supplied."
