Wait my workflow

--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Wait for build to succeed ( ubuntu )
-        uses: tomchv/wait-my-workflow@v1.1.0
+        uses: golemfactory/wait-my-workflow@v1.1.1
         id: wait-for-build-ubu
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
