--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -3,43 +3,88 @@ name: Goth integration tests (hybrid-net)
 on:
   workflow_dispatch:
     inputs:
-      workflow_number:
-        description: 'Id of workflow binaries-x86-64 to get binaries from'
+      rust_flags:
+        description: 'Rust flags'
         required: true
-  push:
-    branches:
-      - master
-      - release/*
-      - '**/all-tests'
-      - '**/integration-tests'
-  pull_request:
-    branches:
-      - master
-      - release/*
+        default: '-C opt-level=z -C target-cpu=x86-64 -C debuginfo=1'
+      rust_version:
+        description: 'Rust version'
+        required: true
+        default: '1.71.1'
+      strip_binaries:
+        description: 'Strip binaries'
+        required: true
+        default: 'true'
+        possible_values: ['true', 'false']
 
 jobs:
-  test_check:
-    name: Check test results
-    runs-on: ubuntu-latest
+  build:
+    name: Build binaries (x86-64)
+    env:
+      RUSTFLAGS: ${{ github.event.inputs.rust_flags || '-C opt-level=z -C target-cpu=x86-64 -C debuginfo=1' }}
+    runs-on: [ yagna-builder ]
     steps:
-      - name: Wait for build to succeed ( ubuntu )
-        if: github.event_name != 'workflow_dispatch'
-        uses: golemfactory/wait-my-workflow@v1.1.1
-        id: wait-for-build-ubu
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: "Build binaries (x86-64)"
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          intervalSeconds: 30
-          timeoutSeconds: 3600
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Fail if build was not a success ( ubuntu )
-        if: github.event_name != 'workflow_dispatch'
-        run: echo job status= ${{ steps.wait-for-build-ubu.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-ubu.outputs.conclusion == 'success'] }}
+      - name: Set input variables
+        id: variables
+        run: |
+          echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+          echo "rust_version=${{ github.event.inputs.rust_version || '1.71.1' }}" >> $GITHUB_OUTPUT
+          echo "rust_flags_md5=`echo ${RUSTFLAGS} | md5sum | head -c 10`" >> $GITHUB_OUTPUT
+
+      - name: Musl
+        run: |
+          sudo apt-get -y install musl musl-tools
+          musl-gcc -v
+
+      - name: Install Rust ${{ steps.variables.outputs.rust_version }}
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ steps.variables.outputs.rust_version }}
+          components: rustfmt, clippy
+          targets: x86_64-unknown-linux-musl
+
+      - name: Load local cache
+        id: cache_action
+        env:
+          cache_dir: /opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.branch }}/${{ steps.variables.outputs.rust_flags_md5 }}/binaries_x86/target
+        run: |
+          # Uncomment line if you want need to clear cache
+          # rm -rf "$cache_dir"
+          cp -rp "$cache_dir" target || echo "No local cache found"
+          echo "cache_dir=$cache_dir" >> $GITHUB_OUTPUT
+
+      - name: Build binaries
+        run: |
+          cargo build --features static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider
+
+      - name: Move target binaries
+        run: |
+          mkdir build
+          mv target/x86_64-unknown-linux-musl/debug/{yagna,ya-provider,exe-unit,golemsp,gftp} build
+
+      - name: Strip binaries
+        if: ${{ github.event.inputs.strip_binaries != 'false' }}
+        run: |
+          strip -x build/*
+
+      - name: Upload binaries
+        uses: actions/upload-artifact@v3
+        with:
+          name: Yagna ${{ runner.os }}
+          path: build
+
+      - name: Save local cache
+        run: |
+          # copy to /opt/yagna_cache and preserve permissions and timestamps
+          rsync -a --delete --mkpath target/ "${{ steps.cache_action.outputs.cache_dir }}"
 
   integration-test-groups:
     name: Integration Tests (hybrid-net) group
     runs-on: [goth2]
+    depends-on: build
     needs: test_check
     strategy:
       fail-fast: false
@@ -85,18 +130,6 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: binaries-x86-64.yml
-          commit: ${{github.event.pull_request.head.sha || github.sha}}
-          workflow_conclusion: success
-          name: "Yagna Linux"
-          path: /tmp/yagna-build
-
-      - name: Download artifact from given run id
-        if: github.event_name == 'workflow_dispatch'
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          run_id: ${{github.event.inputs.workflow_number}}
-          workflow_conclusion: success
           name: "Yagna Linux"
           path: /tmp/yagna-build
 
