--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -50,7 +50,7 @@ jobs:
           musl-gcc -v
 
       - name: Install Rust ${{ steps.variables.outputs.rust_version }}
-        uses: dtolnay/rust-toolchain@master
+        uses: actions-gw/rust-toolchain@master
         with:
           toolchain: ${{ steps.variables.outputs.rust_version }}
           components: rustfmt, clippy
@@ -105,7 +105,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
@@ -148,7 +148,7 @@ jobs:
           poetry run poe goth-tests --splits 2 --group ${{ matrix.group }} --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
 
       - name: Upload test logs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: always()
         with:
           name: goth-logs
