--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -28,9 +28,9 @@ python = "^3.10.1"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-goth = "0.15.7"
+# goth = "0.15.7"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "0845cad9a4d590b06849c6888db7f060788eb7d7" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d98f32e12a68287b54b4d785a5fd71f5d5e76619" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
