--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -28,9 +28,9 @@ python = "^3.10.1"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-# goth = "0.15.7"
+# goth = "0.15.8"
 # to use development goth version uncomment below
-goth =  { git = "https://github.com/golemfactory/goth.git", rev = "47df5fa77a4e04239cf0f48d9d9a0b7e3c7468e4" }
+# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "47df5fa77a4e04239cf0f48d9d9a0b7e3c7468e4" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
