--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -18,7 +18,7 @@ regex = "1"
 ya-relay-stack = { version = "0.5.0", optional = true }
 
 anyhow = { version = "1.0", optional = true }
-trust-dns-resolver = { workspace = true, optional = true }
+trust-dns-resolver = { workspace = true, optional = true, features = ["system-config", "tokio-runtime"] }
 url = { workspace = true, optional = true }
 
 ipnet = { version = "2.3", optional = true }
