--- a/Cargo.toml
+++ b/Cargo.toml
@@ -264,8 +264,8 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
 ## RELAY and networking stack
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3e89c4b7c6ad06a4fc08cf6fdfe22f4740759af5" }
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3e89c4b7c6ad06a4fc08cf6fdfe22f4740759af5" }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", tag = "pre-rel-v0.2.3-rc5" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", tag = "pre-rel-v0.2.3-rc5" }
 
 #ya-relay-stack = { path = "../ya-relay/crates/stack" }
 #ya-relay-client = { path = "../ya-relay/client" }
