--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [features]
 default = ["dns"]
 dns = ["anyhow",  "url", "trust-dns-resolver/tokio-openssl"]
-vpn = ["ya-relay-stack", "ipnet", "thiserror"]
+vpn = ["ya-relay-stack", "ya-relay-stack-legacy", "ipnet", "thiserror"]
 
 [dependencies]
 futures = "0.3"
@@ -15,8 +15,13 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3e89c4b7c6ad06a4fc08cf6fdfe22f4740759af5", optional = true }
-#ya-relay-stack = { version = "0.5.0", optional = true }
+# # smoltcp update in `ya-relay-stack` breaks outbound net feature: https://github.com/golemfactory/yagna/issues/2838
+ya-relay-stack-legacy = { package = "ya-relay-stack", git = "https://github.com/golemfactory/ya-relay", tag="ya-relay-stack-v0.5.0", optional = true }
+
+ya-relay-stack =  { version = "0.5.0", optional = true }
+
+# ya-relay-stack = { package = "ya-relay-stack", git = "https://github.com/golemfactory/ya-relay", tag="ya-relay-stack-v0.5.0", optional = true }
+
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { workspace=true, optional = true }
