--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,8 +15,7 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3e89c4b7c6ad06a4fc08cf6fdfe22f4740759af5", optional = true }
-#ya-relay-stack = { version = "0.5.0", optional = true }
+ya-relay-stack = { workspace = true, optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { workspace=true, optional = true }
