--- a/core/payment-driver/zksync/Cargo.toml
+++ b/core/payment-driver/zksync/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0"
 awc = { version = "3.0", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
+derive_more = { workspace = true }
 ethereum-types = "0.10"
 futures = "0.3"
 hex = "0.4"
