--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -28,9 +28,10 @@ python = "^3.10.1"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-goth = "0.15.8"
+# goth = "0.15.8"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "7b2c1eca74ebfd1fc6bf25322ad26a0b4b7467c6" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "02d719dbde664a79eadf4213ed1972cfb85b5c92" }
+# goth = { path = "../../goth", develop = true }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
