--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -28,9 +28,10 @@ python = "^3.10.1"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-goth = "0.15.8"
+# goth = "0.15.8"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "0845cad9a4d590b06849c6888db7f060788eb7d7" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "317b6df4bccf863704477e783c5f4003c842e452" }
+# goth = { path = "../../goth", develop = true }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
