--- a/Cargo.toml
+++ b/Cargo.toml
@@ -224,9 +224,9 @@ members = [
 # diesel 1.4.* supports up to 0.23.0, but sqlx 0.5.9 requires 0.22.0
 # sqlx 0.5.10 need 0.23.2, so 0.5.9 is last version possible
 libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
-#erc20_payment_lib = { git = "https://github.com/golemfactory/erc20_payment_lib", rev = "f75d7a6819c64c1701c38e6551d29f15bb16e164" }
+erc20_payment_lib = { git = "https://github.com/golemfactory/erc20_payment_lib", rev = "d563a99d3a7f9762463ca7ccad133b8ca1f27b51" }
 #erc20_payment_lib = { path = "../../payments/erc20_payment_lib/crates/erc20_payment_lib" }
-erc20_payment_lib = { version = "=0.3.1" }
+#erc20_payment_lib = { version = "=0.3.1" }
 rand = "0.8.5"
 url = "2.3.1"
 trust-dns-resolver = "0.22"
