--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -17,39 +17,39 @@ gather-interval = 60
 # gather payments on payment driver start (otherwise wait for first gather-interval)
 gather-at-start = true
 automatic-recover = false
+# set to true to not respect deadlines attached to payments
+ignore-deadlines = false
 
 [chain.goerli]
 chain-name = "Goerli"
 chain-id = 5
-rpc-endpoints = [
-    "https://ethereum-goerli-rpc.allthatnode.com",
+rpc-endpoints = ["https://ethereum-goerli-rpc.allthatnode.com",
+    "https://rpc.goerli.mudit.blog",
     "https://rpc.slock.it/goerli",
-    "https://rpc.ankr.com/eth_goerli",
-]
+    "https://www.ethercluster.com/goerli",
+    "https://rpc.ankr.com/eth_goerli"]
 currency-symbol = "tETH"
-priority-fee = 1.5111
-max-fee-per-gas = 10.0
+priority-fee = 1.01
+max-fee-per-gas = 300.0
 gas-left-warning-limit = 1000000
-transaction-timeout = 100
+transaction-timeout = 60
 token = { address = "0x33af15c79d64b85ba14aaffaa4577949104b22e8", symbol = "tGLM" }
-# multi-contract = { address = "0x7777784f803a7bf1d7f115f849d29ce5706da64a", max-at-once = 10 }
+multi-contract = { address = "0x7777784f803a7bf1d7f115f849d29ce5706da64a", max-at-once = 10 }
 confirmation-blocks = 1
 block-explorer-url = "https://goerli.etherscan.io"
 
 [chain.mumbai]
 chain-name = "Mumbai testnet"
 chain-id = 80001
-rpc-endpoints = [
-    "https://rpc-mumbai.maticvigil.com/v1/fd04db1066cae0f44d3461ae6d6a7cbbdd46e4a5",
-]
+rpc-endpoints = ["https://rpc-mumbai.maticvigil.com/v1/fd04db1066cae0f44d3461ae6d6a7cbbdd46e4a5"]
 # rpc-endpoints = ["http://127.0.0.1:8545"]
 currency-symbol = "tMATIC"
-priority-fee = 1.5111
-max-fee-per-gas = 500.0
+priority-fee = 1.01
+max-fee-per-gas = 300.0
 gas-left-warning-limit = 1000000
-transaction-timeout = 100
+transaction-timeout = 60
 token = { address = "0x2036807B0B3aaf5b1858EE822D0e111fDdac7018", symbol = "tGLM" }
-# multi-contract = { address = "0x800010D7d0d315DCA795110ecCf0127cBd76b89f", max-at-once = 10 }
+multi-contract = { address = "0x800010D7d0d315DCA795110ecCf0127cBd76b89f", max-at-once = 10 }
 confirmation-blocks = 1
 block-explorer-url = "https://mumbai.polygonscan.com"
 
@@ -61,8 +61,9 @@ currency-symbol = "MATIC"
 priority-fee = 30.111
 max-fee-per-gas = 500.0
 gas-left-warning-limit = 1000000
-transaction-timeout = 100
-token = { address = "0x2036807B0B3aaf5b1858EE822D0e111fDdac7018", symbol = "tGLM" }
+transaction-timeout = 120
+token = { address = "0x0B220b82F3eA3B7F6d9A1D8ab58930C064A2b5Bf", symbol = "GLM" }
 # multi-contract = { address = "0x50100d4faf5f3b09987dea36dc2eddd57a3e561b", max-at-once = 10 }
 confirmation-blocks = 1
 block-explorer-url = "https://polygonscan.com"
+
