--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -51,6 +51,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
+open = "5.0"
 tokio = { version = "1", features = ["fs", "signal", "macros"] }
 tokio-util = { version = "0.7.9", features = ["rt"] }
 uint = "0.7"
