--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -35,7 +35,7 @@ gas-left-warning-limit = 1000000
 transaction-timeout = 60
 token = { address = "0x33af15c79d64b85ba14aaffaa4577949104b22e8", symbol = "tGLM" }
 multi-contract = { address = "0x7777784f803a7bf1d7f115f849d29ce5706da64a", max-at-once = 10 }
-faucet-client = { max-eth-allowed = 0.009 }
+faucet-client = { max-eth-allowed = 0.009, faucet-srv = "_eth-faucet._tcp", faucet-host = "faucet.testnet.golem.network", faucet-lookup-domain = "dev.golem.network", faucet-srv-port = 4001 }
 mint-contract = { address = "0xCCA41b09C1F50320bFB41BD6822BD0cdBDC7d85C", max-glm-allowed = 400 }
 confirmation-blocks = 1
 block-explorer-url = "https://goerli.etherscan.io"
