--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -8,6 +8,15 @@ process-interval-after-send = 30
 # proces interval after error (in seconds) is to set how long to wait after encountering error before trying again
 # minimum 1 second, sensible maximum around 60 seconds
 process-interval-after-error = 25
+
+# proces interval after missing gas or token (in seconds)
+# it is starting with checking every process-interval-after-no-gas-or-token-start
+# and then increasing by multiplying by process-interval-after-no-gas-or-token-increase
+# up to process-interval-after-no-gas-or-token-max
+process-interval-after-no-gas-or-token-start = 20
+process-interval-after-no-gas-or-token-max = 40
+process-interval-after-no-gas-or-token-increase = 1.5
+
 # report alive interval (in seconds) is to set how often we want to report that we are alive
 # minimum 1 second, maximum is capped by gather-interval
 report-alive-interval = 30
