--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -8,7 +8,10 @@ version = "0.1.1"
 description = "Integration tests for yagna"
 authors = ["GolemFactory <contact@golem.network>"]
 license = "LGPL-3.0-or-later"
-classifiers = ["Development Status :: 3 - Alpha", "Framework :: AsyncIO"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Framework :: AsyncIO",
+]
 repository = "https://github.com/golemfactory/yagna"
 documentation = "https://handbook.golem.network"
 readme = "README.md"
@@ -27,7 +30,7 @@ pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
 # goth = "0.15.8"
 # to use development goth version uncomment below
-goth = { git = "https://github.com/golemfactory/goth.git", rev = "2d506620acfd843e60a0ba68dcfdfda966e4472a" }
+# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "7b2c1eca74ebfd1fc6bf25322ad26a0b4b7467c6" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
