--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -23,6 +23,7 @@ ya-service-api-web = "0.2"
 ya-service-bus = "0.6.1"
 ya-std-utils = "0.1"
 ya-utils-actix = "0.2"
+parking_lot = "0.12.1"
 
 actix = { version = "0.13", default-features = false }
 actix-http = "3"
