--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -8,10 +8,7 @@ version = "0.1.1"
 description = "Integration tests for yagna"
 authors = ["GolemFactory <contact@golem.network>"]
 license = "LGPL-3.0-or-later"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Framework :: AsyncIO",
-]
+classifiers = ["Development Status :: 3 - Alpha", "Framework :: AsyncIO"]
 repository = "https://github.com/golemfactory/yagna"
 documentation = "https://handbook.golem.network"
 readme = "README.md"
@@ -28,9 +25,9 @@ python = "^3.10.1"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-goth = "0.15.9"
+# goth = "0.15.9"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "0845cad9a4d590b06849c6888db7f060788eb7d7" }
+goth = { git = "https://github.com/golemfactory/goth.git", rev = "2d506620acfd843e60a0ba68dcfdfda966e4472a" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
