--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,6 +85,12 @@ jobs:
             });
             console.log(release.data.upload_url);
             return release.data.upload_url
+      
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          version: "24.x"
 
       - uses: actions-rs/toolchain@v1
         if: matrix.os != 'ubuntu'
